# Scenarious1

./: README.md  openapi.yaml
backend/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
backend/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
backend/src/: main.cpp
backend/src/handlers/auth/check/: view.cpp  view.hpp
backend/src/handlers/auth/yandex/: view.cpp  view.hpp
backend/src/handlers/blocks/create_block/: view.cpp  view.hpp
backend/src/handlers/blocks/delete_block_by_id/: view.cpp  view.hpp
backend/src/handlers/blocks/get_block_by_id/: view.cpp  view.hpp
backend/src/handlers/blocks/get_blocks_by_scenario_id/: view.cpp  view.hpp
backend/src/handlers/blocks/latest_get_block/: view.cpp  view.hpp
backend/src/handlers/blocks/move_block/: view.cpp  view.hpp
backend/src/handlers/blocks/update_block_by_id/: view.cpp  view.hpp
backend/src/handlers/blocks/update_children/: view.cpp  view.hpp
backend/src/handlers/comments/comment_reply/: view.cpp  view.hpp
backend/src/handlers/comments/get_comments/: view.cpp  view.hpp
backend/src/handlers/comments/post_comment/: view.cpp  view.hpp
backend/src/handlers/scenarios/create_scenario/: view.cpp  view.hpp
backend/src/handlers/scenarios/delete_scenario/: view.cpp  view.hpp
backend/src/handlers/scenarios/get_scenario_by_id/: view.cpp  view.hpp
backend/src/handlers/scenarios/get_scenarios_by_user_id/: view.cpp  view.hpp
backend/src/handlers/scenarios/get_versions_by_id/: view.cpp  view.hpp
backend/src/handlers/scenarios/update_blocks/: view.cpp  view.hpp
backend/src/handlers/scenarios/update_scenario/: view.cpp  view.hpp
backend/src/handlers/templates/get-block-templates/: view.cpp  view.hpp
backend/src/handlers/templates/get-scenario-templates/: view.cpp  view.hpp
backend/src/handlers/user/info/: view.cpp  view.hpp
backend/src/handlers/user/invite/: view.cpp  view.hpp
backend/src/handlers/user/redirect/: view.cpp  view.hpp
backend/src/lib/: create_new_version.cpp  create_new_version.hpp  get_children_blocks.cpp  get_children_blocks.hpp  get_latest_version.cpp  get_latest_version.hpp  get_user_role_by_scenario_id.cpp  get_user_role_by_scenario_id.hpp  update_block_with_json.cpp  update_block_with_json.hpp
backend/src/middlewares/: auth.cpp  auth.hpp  cors.cpp  cors.hpp
backend/src/models/: block.cpp  block.hpp  comment.cpp  comment.hpp  metainfo.cpp  metainfo.hpp  role.hpp  scenario.cpp  scenario.hpp  user.cpp  user.hpp
backend/src/mongo_init/: Dockerfile  load_template.py
backend/tests/: conftest.py  test_mongo.py
backend/unittests/: block_serialize_test.cpp  comment_serialize_test.cpp  metadata_serialize_test.cpp  update_block_from_json_test.cpp  user_serialize_test.cpp
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/scr/: App.tsx  index.css  main.tsx
frontend/scr/components/: index.ts
frontend/scr/components/AsideHeader/: CustomAsideHeader.module.css  CustomAsideHeader.tsx
frontend/scr/components/Avatars/: DefaultAvatar.tsx
frontend/scr/components/Block/: Block.module.css  Block.tsx
frontend/scr/components/BlockDetails/: BlockDetails.module.css  BlockDetails.tsx
frontend/scr/components/BlockTemplate/: BlockTemplate.module.css  BlockTemplate.tsx  BlockTemplateExample.tsx
frontend/scr/components/Blocks/: Blocks.module.css  Blocks.tsx  FloatingComments.tsx
frontend/scr/components/BreadCrumbsInfo/: BreadCrumbsInfo.module.css  BreadCrumbsInfo.tsx
frontend/scr/components/BreadCrumbsPath/: BreadCrumbsPath.tsx
frontend/scr/components/ColorPicker/: ColorPicker.module.css  ColorPicker.tsx
frontend/scr/components/CommentBlock/: CommentBlock.module.css  CommentBlock.tsx
frontend/scr/hooks/: useAnimationOnChange.ts  useAuth.ts  useBlockById.ts  useBlockChildrenUpdate.ts  useBlockCreate.ts  useBlockDelete.ts  useBlockUpdate.ts  useBlocksMove.ts  useComments.ts  useCreateComment.ts  useDebouncedCallback.ts  useDeleteComment.ts  useNotifications.ts  useReplyComment.ts  useScenario.ts  useScenarioBlocks.ts  useScenarioCreate.ts  useScenarioDelete.ts  useScenarioUpdate.ts  useScenarioVersions.ts  useScenariosByUser.ts  useTemplates.ts
frontend/scr/mocks/: EmptyBlock.ts  initialBlockTemplates.ts  initialBlocks.ts  initialNotifications.ts  initialRoles.ts  initialScenarioTemplates.ts  initialScenarios.ts  initialSupportInfo.tsx  initialUsers.ts  initialVersions.ts
frontend/scr/pages/Auth/: Auth.tsx  (+1 more)
frontend/scr/services/: authApi.ts  axios.ts  queryKeys.ts
frontend/scr/types/: Block.ts  BlockTemplate.ts  Comment.ts  ConvertedRoles.ts  Notification.ts  Role.ts  Scenario.ts  ScenarioTemplate.ts  Version.ts  index.ts
frontend/scr/utils/: blocks.ts  blocksToEvents.ts  dateGrouping.ts  dateTimeFormatter.ts  formatRelativeTime.ts  htmlToText.ts  logoutUser.ts  pluralize.ts  roleMapping.ts  scenarioStatusMapping.ts
infrastructure/ansible/: infrastructure-setup.yaml  prod-deploy.yaml  yc-registry-playbook.yaml
infrastructure/ansible/scripts/: docker-compose.yaml  nginx.conf
infrastructure/terraform/: cloud-init.yaml  instances.tf  mdb.tf  network.tf  provider.tf  registry.tf  sg.tf
tests/: api1.spec.ts
tests/frontend/: run_api_tests.sh
tests/frontend/AsideHeader/: CastomAsideHeader.test.tsx
tests/frontend/Scenario/: Scenario.test.tsx
tests/ui-tests/: scenContainrtBlock.spec.ts  scenDetailsPage.spec.ts  scenMainPage.spec.ts  scenNewScen.spec.ts
yWebsocketServer/: Dockerfile  app.js  package-lock.json  package.json
(+93 files in other folders)
